crates/ruff_linter/src/rules/perflint/snapshots/ruff_linter__rules__perflint__tests__preview__PERF403_PERF403.py.snap
---
source: crates/ruff_linter/src/rules/perflint/mod.rs
---
PERF403 [*] Use a dictionary comprehension instead of a for-loop
 --> PERF403.py:5:9
  |
3 |     result = {}
4 |     for idx, name in enumerate(fruit):
5 |         result[idx] = name  # PERF403
  |         ^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
  |
3 + 
4 ~     result = {idx: name for idx, name in enumerate(fruit)}  # PERF403
  |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
  --> PERF403.py:13:13
   |
11 |     for idx, name in enumerate(fruit):
12 |         if idx % 2:
13 |             result[idx] = name  # PERF403
   |             ^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
   |
10 + 
11 ~     result = {idx: name for idx, name in enumerate(fruit) if idx % 2}  # PERF403
   |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
  --> PERF403.py:33:13
   |
31 |     for idx, name in enumerate(fruit):
32 |         if idx % 2:
33 |             result[idx] = name  # PERF403
   |             ^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
   |
29 + 
30 |     fruit = ["apple", "pear", "orange"]
31 ~     result = {idx: name for idx, name in enumerate(fruit) if idx % 2}  # PERF403
   |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use `dict.update` instead of a for-loop
  --> PERF403.py:63:13
   |
61 |     for idx, name in enumerate(fruit):
62 |         if idx % 2:
63 |             result[idx] = name  # PERF403
   |             ^^^^^^^^^^^^^^^^^^
help: Replace for loop with `dict.update`
   |
61 -     for idx, name in enumerate(fruit):
62 -         if idx % 2:
63 -             result[idx] = name  # PERF403
61 +     result.update({idx: name for idx, name in enumerate(fruit) if idx % 2})  # PERF403
   |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
  --> PERF403.py:78:9
   |
76 |     result = {}
77 |     for name in fruit:
78 |         result[name] = name  # PERF403
   |         ^^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
   |
76 + 
77 ~     result = {name: name for name in fruit}  # PERF403
   |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
  --> PERF403.py:85:9
   |
83 |     result = {}
84 |     for idx, name in enumerate(fruit):
85 |         result[name] = idx  # PERF403
   |         ^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
   |
83 + 
84 ~     result = {name: idx for idx, name in enumerate(fruit)}  # PERF403
   |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
  --> PERF403.py:94:9
   |
92 |     result = SneakyDict()
93 |     for idx, name in enumerate(fruit):
94 |         result[name] = idx  # PERF403
   |         ^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
   |
92 + 
93 ~     result = {name: idx for idx, name in enumerate(fruit)}  # PERF403
   |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:106:9
    |
104 |       ):
105 |           # comment 3
106 | /         result[
107 | |             name  # comment 4
108 | |         ] = idx  # PERF403
    | |_______________^
help: Replace for loop with dict comprehension
    |
 99 + 
100 ~     # comment 1
101 +     # comment 3
102 +     # comment 4
103 +     result: dict[str, int] = {name: idx for idx, name in enumerate(
104 +         fruit  # comment 2
105 ~     )}  # PERF403
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:115:9
    |
113 |     a = 1; result = {}; b = 2
114 |     for idx, name in enumerate(fruit):
115 |         result[name] = idx  # PERF403
    |         ^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
    |
113 ~     a = 1; b = 2
114 ~     result = {name: idx for idx, name in enumerate(fruit)}  # PERF403
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use `dict.update` instead of a for-loop
   --> PERF403.py:122:9
    |
120 |     result = {"kiwi": 3}
121 |     for idx, name in enumerate(fruit):
122 |         result[name] = idx  # PERF403
    |         ^^^^^^^^^^^^^^^^^^
help: Replace for loop with `dict.update`
    |
121 -     for idx, name in enumerate(fruit):
122 -         result[name] = idx  # PERF403
121 +     result.update({name: idx for idx, name in enumerate(fruit)})  # PERF403
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use `dict.update` instead of a for-loop
   --> PERF403.py:129:9
    |
127 |     (_, result) = (None, {"kiwi": 3})
128 |     for idx, name in enumerate(fruit):
129 |         result[name] = idx  # PERF403
    |         ^^^^^^^^^^^^^^^^^^
help: Replace for loop with `dict.update`
    |
128 -     for idx, name in enumerate(fruit):
129 -         result[name] = idx  # PERF403
128 +     result.update({name: idx for idx, name in enumerate(fruit)})  # PERF403
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use `dict.update` instead of a for-loop
   --> PERF403.py:137:9
    |
135 |     print(len(result))
136 |     for idx, name in enumerate(fruit):
137 |         result[name] = idx  # PERF403
    |         ^^^^^^^^^^^^^^^^^^
help: Replace for loop with `dict.update`
    |
136 -     for idx, name in enumerate(fruit):
137 -         result[name] = idx  # PERF403
136 +     result.update({name: idx for idx, name in enumerate(fruit)})  # PERF403
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:145:13
    |
143 |     for idx, name in enumerate(fruit):
144 |         if last_idx := idx % 3:
145 |             result[name] = idx  # PERF403
    |             ^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
    |
142 + 
143 ~     result = {name: idx for idx, name in enumerate(fruit) if (last_idx := idx % 3)}  # PERF403
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:153:9
    |
151 |     result = {}
152 |     for idx, name in indices, fruit:
153 |         result[name] = idx  # PERF403
    |         ^^^^^^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
    |
151 + 
152 ~     result = {name: idx for idx, name in (indices, fruit)}  # PERF403
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:162:13
    |
160 |     for k, v in src:
161 |         if True if True else False:
162 |             dst[k] = v
    |             ^^^^^^^^^^
163 |
164 |     for k, v in src:
    |
help: Replace for loop with dict comprehension
    |
158 + 
159 |
160 ~     dst = {k: v for k, v in src if (True if True else False)}
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use `dict.update` instead of a for-loop
   --> PERF403.py:166:13
    |
164 |     for k, v in src:
165 |         if lambda: 0:
166 |             dst[k] = v
    |             ^^^^^^^^^^
167 |
168 | # https://github.com/astral-sh/ruff/issues/18859
    |
help: Replace for loop with `dict.update`
    |
164 -     for k, v in src:
165 -         if lambda: 0:
166 -             dst[k] = v
164 +     dst.update({k: v for k, v in src if (lambda: 0)})
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:172:9
    |
170 |     v = {}
171 |     for o,(x,)in():
172 |         v[x,]=o
    |         ^^^^^^^
help: Replace for loop with dict comprehension
    |
170 + 
171 ~     v = {(x,): o for o,(x,) in ()}
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:200:9
    |
198 |     v = {}
199 |     for o, (x,) in ["ox"]:
200 |         v[x,] = o
    |         ^^^^^^^^^
201 |     return v
    |
help: Replace for loop with dict comprehension
    |
198 + 
199 ~     v = {(x,): o for o, (x,) in ["ox"]}
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:207:9
    |
205 |     v = {}
206 |     for (o, p), x in [("op", "x")]:
207 |         v[x] = o, p
    |         ^^^^^^^^^^^
208 |     return v
    |
help: Replace for loop with dict comprehension
    |
205 + 
206 ~     v = {x: (o, p) for (o, p), x in [("op", "x")]}
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:214:9
    |
212 |     v = {}
213 |     for o, (x,) in ["ox"]:
214 |         v[(x,)] = o
    |         ^^^^^^^^^^^
215 |     return v
    |
help: Replace for loop with dict comprehension
    |
212 + 
213 ~     v = {(x,): o for o, (x,) in ["ox"]}
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:225:13
    |
223 |             # comment
224 |         ):
225 |             result[k] = k
    |             ^^^^^^^^^^^^^
226 |
227 | def f():
    |
help: Replace for loop with dict comprehension
    |
219 + 
220 ~     # comment
221 +     result = {k: k for k in ["a", "b", "c"] if k}
    |
note: This is an unsafe fix and may change runtime behavior

PERF403 [*] Use a dictionary comprehension instead of a for-loop
   --> PERF403.py:233:9
    |
231 |         k  # comment
232 |     ) in ["a", "b", "c"]:
233 |         result[k] = k
    |         ^^^^^^^^^^^^^
help: Replace for loop with dict comprehension
    |
229 + 
230 ~     # comment
231 +     result = {k: k for k in ["a", "b", "c"]}
    |
note: This is an unsafe fix and may change runtime behavior
